--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-body{
+body, html {
     font-family: 'Roboto';
     font-style: normal;
-    background: url('assets/background.png');
-    background-repeat: no-repeat;
-    background-position-x: right;
+    background: url('assets/background.png') no-repeat right top;
     background-origin: border-box;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 ul {
@@ -12,69 +13,74 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-  }
-  
-  li {
+}
+
+li {
     float: left;
     padding: 2rem;
-  }
-  
-  li a {
+}
+
+li a {
     display: block;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-  }
-  
- 
-  li a:hover {
-    background-color: #ff0404;
-  }
+}
 
-.lista_top{
+li a:hover {
+    background-color: #ff0404;
+}
+
+.lista_top {
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
 .content {
-    padding-bottom: 440px;
     margin-bottom: 100px;
+    padding-bottom: 440px;
+    padding-top: 0;
 }
 
-.titulo_principal{
+.titulo_principal {
     color: #091133;
     font-size: 50px;
     font-weight: 500;
-    line-height: 66px; /* 132% */
+    line-height: 66px;
     letter-spacing: 1px;
+}
+
+span {
+    color: #ffffff;
 }
 
 .content div {
     color: #D44D51;
     font-size: 18px;
     font-weight: 400;
-    line-height: 30px; /* 166.667% */
+    line-height: 30px;
     width: 540px;
-    padding-left: 6rem;
+    margin-left: 12rem;
+    margin-top: 2rem;
 }
 
 .content div span {
     color: #D44D51;
     font-weight: 400;
-    line-height: 30px; 
+    line-height: 30px;
 }
 
 ul {
-    display: inline;
     color: #CD313E;
     font-size: 14px;
     font-weight: 400px;
     line-height: 24px;
-    list-style: none
+    list-style: none;
+    display: inline;
 }
 
-button {
+button, .btn-inferior {
     width: 189.131px;
     height: 36px;
     flex-shrink: 0;
@@ -84,24 +90,27 @@ button {
     border: 1px solid;
 }
 
-.btn_cima{
-    box-shadow: #000000;
+.btn_cima {
+    height: 25px;
+    border: none;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
-.btn-meio{
+.btn-meio {
     background-color: #ffffff00;
     color: #000000;
     border: 1px solid;
 }
 
-
-a{
+a {
     margin-right: 20px;
 }
 
-footer{
+footer {
     background-color: #F78282;
+
 }
+
 .rede-social {
     padding-top: 30px;
     width: 150%;
@@ -109,12 +118,13 @@ footer{
     padding-bottom: 20px;
 }
 
-.btn-inferior{
+.btn-inferior {
     position: absolute;
     left: 80%;
+    border: 1px solid transparent;
 }
 
-.div_fim{
+.div_fim {
     padding: 30px;
     display: flex;
     align-items: center;
